* Make classes immutable * Use record instead of class